# putio-automator

./: .codeclimate.yml  .editorconfig  .env.dist  .gitattributes  .gitignore  .pylintrc  Dockerfile  Dockerfile.development  Dockerfile.template  LICENSE  Makefile  README.md  README.rst  app.py  application.ini.dist  application.py  config.py.dist  manage.py  pyproject.toml  requirements-to-freeze.txt  requirements.txt  requirements.txt.orig  setup.cfg  setup.py  test.py  tests.py
.github/workflows/: build.yml  codeql-analysis.yml
etc/: aliases  config.py  config.py.dist  config.py.dist-rpi  cron  fstab  rsyslog.conf  supervisor.conf  supervisor.conf-rpi  supervisord.conf
etc/supervisor/: supervisord.conf
etc/supervisor/conf.d/: app.conf
fixtures/: sample.torrent
putio_automator/: __init__.py  app.py  cli.py  db.py  manage.py
putio_automator/commands/: __init__.py  account.py  config.py  db.py  docker.py  files.py  torrents.py  transfers.py
tests/: app_test.py
