[tool.poetry]
name = "putio-automator"
version = "2.2.0"
description = "Automate management of torrents and files on Put.IO."
authors = ["datashaman <marlinf@datashaman.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Utilities",
]
include = [
    "etc/config.py.dist",
]
keywords = [
    "download",
    "media",
    "seedbox",
    "torrent",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "putio_automator" },
]

[tool.poetry.dependencies]
python = ">=3.8"
appdirs = "^1.4.4"
click = "^8.1.3"
click-log = "^0.4.0"
putio-py = "^8.7.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
watchdog = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pyfakefs = "^5.1.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
responses = "^0.22.0"
twine = "^4.0.2"
pyright = "^1.1.296"
mypy = "^1.0.1"
types-requests = "^2.28.11.15"

[tool.poetry.scripts]
putio = "putio_automator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
