[metadata]
name = putio-automator
author = Marlin Forbes
author-email = marlinf@datashaman.com
summary = Automate management of torrents and files on Put.IO.
description-file = README.md
home-page = https://github.com/datashaman/putio-automator
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet
    Topic :: Utilities
keywords =
    torrent
    download
    seedbox
    media

[files]
packages =
    putio_automator
data_files =
    etc = config.py.dist

[entry_points]
console_scripts =
    putio = putio_automator.manage:main
