[metadata]
name = putio-automator
author = Marlin Forbes
author-email = marlinf@datashaman.com
summary = Automate management of torrents and files on Put.IO.
home-page = https://github.com/datashaman/putio-automator
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet
    Topic :: Utilities
keywords =
    torrent
    download
    seedbox
    media

[entry_points]
console_scripts =
    putio = putio_automator.manage:main

[extras]
testing =
    mock

[files]
data_files =
    etc/putio-automator = etc/config.py.dist
packages =
    putio_automator
